fixed visibility of outreach text

--- a/css/WebsiteStyle.css
+++ b/css/WebsiteStyle.css
@@ -22,3 +22,6 @@
   background-color: #313A7D;
   border-color: #313A7D;
 }
+#whitefont {
+  color:#D3D3D3;
+}
